--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "author": "Alex Serkin",
   "license": "ISC",
   "description": "gulp builder",
-  "repository" : { 
+  "repository": {
     "type": "git",
     "url": "https://github.com/jichanghir/gulp-builder.git"
   },
   "scripts": {},
   "devDependencies": {
     "browser-sync": "~2.18.7",
-    "del": "~2.2.2",
+    "del": "~3.0.0",
     "gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
-    "gulp-autoprefixer": "~3.1.1",
+    "gulp-autoprefixer": "~4.0.0",
     "gulp-cheerio": "~0.6.2",
     "gulp-concat": "~2.6.1",
     "gulp-concat-css": "~2.3.0",
@@ -21,15 +21,16 @@
     "gulp-eslint": "~3.0.1",
     "gulp-load-plugins": "~1.5.0",
     "gulp-notify": "~3.0.0",
+    "gulp-pug": "~3.3.0",
     "gulp-replace": "~0.5.4",
     "gulp-sass": "~3.1.0",
-    "gulp-sourcemaps": "~2.4.0",
+    "gulp-sourcemaps": "~2.6.0",
     "gulp-svg-sprite": "~1.3.1",
     "gulp-svgmin": "~1.2.2",
     "gulp.spritesmith": "^6.4.0"
   },
   "dependencies": {
-    "normalize.css": "~5.0.0",
-    "jquery": "~3.1.1"
+    "normalize.css": "~7.0.0",
+    "jquery": "~3.2.1"
   }
 }
