--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "gulp-autoprefixer": "~4.0.0",
     "gulp-cheerio": "~0.6.2",
     "gulp-concat": "~2.6.1",
-    "gulp-concat-css": "~2.3.0",
     "gulp-csso": "~2.0.0",
     "gulp-eslint": "~3.0.1",
     "gulp-load-plugins": "~1.5.0",
@@ -24,13 +23,16 @@
     "gulp-pug": "~3.3.0",
     "gulp-replace": "~0.5.4",
     "gulp-sass": "~3.1.0",
+    "gulp-sass-glob": "^1.0.8",
     "gulp-sourcemaps": "~2.6.0",
     "gulp-svg-sprite": "~1.3.1",
     "gulp-svgmin": "~1.2.2",
     "gulp.spritesmith": "^6.4.0"
   },
   "dependencies": {
-    "normalize.css": "~7.0.0",
-    "jquery": "~3.2.1"
+    "font-awesome": "^4.7.0",
+    "jquery": "~3.2.1",
+    "jquery-ui-dist": "^1.12.1",
+    "normalize.css": "~7.0.0"
   }
 }
