--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ASBuilder",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "author": "Alex Serkin",
   "license": "ISC",
   "description": "gulp builder",
@@ -12,7 +12,7 @@
   "devDependencies": {
     "browser-sync": "^2.24.4",
     "del": "~3.0.0",
-    "gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
+    "gulp": "^4.0.1",
     "gulp-autoprefixer": "~4.0.0",
     "gulp-cheerio": "^0.6.3",
     "gulp-concat": "~2.6.1",
@@ -22,16 +22,16 @@
     "gulp-notify": "~3.0.0",
     "gulp-pug": "~3.3.0",
     "gulp-replace": "~0.5.4",
-    "gulp-sass": "~3.1.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sass-glob": "^1.0.9",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-svg-sprite": "~1.3.1",
-    "gulp-svgmin": "~1.2.2",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svgmin": "^2.2.0",
     "gulp.spritesmith": "^6.9.0"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "jquery": "~3.2.1",
+    "jquery": "^3.4.1",
     "jquery-ui-dist": "^1.12.1",
     "normalize.css": "~7.0.0"
   }
